# drummy

./: .gitignore  LICENSE  README.md  pads.py
drumino/: drumino.ino
drumix/: CMakeLists.txt
drumix/ext/: serialib.cpp
drumix/src/: main.cpp
drumix/src/daemon/: main.cpp
drumix/src/ui/: main.cpp
drummix/src/: main.cpp  sokol.cpp
